parser/tests/parser/complex/invalid/dot_in_body_as_var.mf2
.foo $var.two = {:hello}
{{}}
=== spans ===
                    .foo $var.two = {:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                                ^^^^ 1:0-1:4
Pattern                                           0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..24)
  .foo $var.two = {:hello}↵{{}}
  ^^^^^^^^^^^^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..29,
    declarations: [],
    body: QuotedPattern {
        span: @25..29,
        pattern: Pattern {
            parts: [],
        },
    },
}